<resources>
    <string name="app_name">LiftLink - 양 사장의 사다리차 플랫폼</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="signup">회원가입</string>
    <string name="verifyPassword">비밀번호 확인</string>
    <string name="home_title">홈</string>
    <string name="welcome_message">안녕하세요, %1$s님!</string>
    <string name="reservation_status">진행 중인 예약: %1$d건</string>
    <string name="logout">로그아웃</string>
</resources>